plex/00-plex-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: plex
  labels:
    istio-injection: enabled
