plex/plex.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
  labels:
    app: plex
spec:
  type: NodePort
  selector:
    app: plex
  ports:
  - name: http
    protocol: TCP
    port: 32400
    nodePort: 32400
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: plex
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      priorityClassName: high-priority
      containers:
      - name: plex
        image: plexinc/pms-docker:1.16.4.1469-6d5612c2f
        resources:
          requests:
            cpu: 0.2
            memory: 1Gi
        readinessProbe:
          exec:
            command:
            - /healthcheck.sh
          failureThreshold: 5
          timeoutSeconds: 15
          periodSeconds: 15
        livenessProbe:
          exec:
            command:
            - /healthcheck.sh
          initialDelaySeconds: 120
          failureThreshold: 5
          timeoutSeconds: 15
          periodSeconds: 15
        ports:
        - containerPort: 32400
          name: http
        volumeMounts:
        - name: data
          mountPath: /data
        - name: config
          mountPath: /config
        - name: transcode
          mountPath: /transcode
        - name: tmp
          mountPath: /tmp
      nodeName: core1
      volumes:
      - name: data
        nfs:
          server: nfs.lukeaddison.co.uk
          path: "/mnt/data/plex"
          readOnly: true
      - name: plex-config
        persistentVolumeClaim:
          claimName: plex
      - name: transcode
        emptyDir: {}
      - name: tmp
        emptyDir: {}
