plex/plex-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: plex
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - dippystreams.co.uk
    tls:
      httpsRedirect: true
  - port:
      number: 8443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: dippystreams-co-uk-tls
    hosts:
    - plex/dippystreams.co.uk
  - port:
      number: 32400
      name: https-plex
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
    hosts:
    - plex/dippystreams.co.uk
