plex/plex-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: plex
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/secure-backends: "true"
spec:
  tls:
  - secretName: plex-tls
    hosts:
    - plex.lukeaddison.co.uk
  rules:
  - host: plex.lukeaddison.co.uk
    http:
      paths:
      - backend:
          serviceName: plex
          servicePort: 32400
  - host: plex
    http:
      paths:
      - backend:
          serviceName: plex
          servicePort: 32400
