plex/service-entries.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dippystreams-co-uk
  namespace: plex
spec:
  hosts:
  - dippystreams.co.uk
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
# https://istio.io/docs/tasks/traffic-management/egress/wildcard-egress-hosts/#configure-direct-traffic-to-a-wildcard-host
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: plex-tv
  namespace: plex
spec:
  hosts:
  - plex.tv
  - "*.plex.tv"
  exportTo:
  - "."
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: tls
    protocol: TLS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: plex-bz
  namespace: plex
spec:
  hosts:
  - plex.bz
  - "*.plex.bz"
  exportTo:
  - "."
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: tls
    protocol: TLS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: plex-direct
  namespace: plex
spec:
  hosts:
  - "*.plex.direct"
  exportTo:
  - "."
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: tls
    protocol: TLS
  - number: 32400
    name: tls-plex
    protocol: TLS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: resources-cdn-plexapp-com
  namespace: plex
spec:
  hosts:
  - resources-cdn.plexapp.com
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: api-tmdb-org
  namespace: plex
spec:
  hosts:
  - api.tmdb.org
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: image-tmdb-org
  namespace: plex
spec:
  hosts:
  - image.tmdb.org
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: api-cinematerial-com
  namespace: plex
spec:
  hosts:
  - api.cinematerial.com
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: me-plexapp-com
  namespace: plex
spec:
  hosts:
  - me.plexapp.com
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: lastfm-z-plexapp-com
  namespace: plex
spec:
  hosts:
  - lastfm-z.plexapp.com
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: lastfm-freetls-fastly-net
  namespace: plex
spec:
  hosts:
  - lastfm.freetls.fastly.net
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: thetvdb-com
  namespace: plex
spec:
  hosts:
  - thetvdb.com
  - "*.thetvdb.com"
  exportTo:
  - "."
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: tls
    protocol: TLS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: gravatar-com
  namespace: plex
spec:
  hosts:
  - gravatar.com
  - "*.gravatar.com"
  exportTo:
  - "."
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: tls
    protocol: TLS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: artworks-thetvdb-com
  namespace: plex
spec:
  hosts:
  - artworks.thetvdb.com
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
